[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[features]
huge_files = ["bytes/huge_files"]

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
bytes = { path = "../bytes"}
bumpalo = { version = "3.16.0", features = ["allocator_api"] }
errors = { path = "../errors" }
derive-where = "1.2.7"