[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[features]
huge_files = ["span/huge_files"]

[dependencies]
span = { path = "../span" }
phf = { version = "0.11.2", features = ["macros"] }
byte_reader = { git = "https://github.com/Trombecher/byte-reader" }
bumpalo = { version = "3.16.0", features = ["allocator_api"] }
errors = { path = "../errors" }
derive-where = "1.2.7"