[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[features]
huge_files = ["span/huge_files"]

[dependencies]
span = { path = "../span" }
phf = { version = "0.11.2", features = ["macros"] }
byte_reader = { git = "https://github.com/Trombecher/byte-reader", version = "0.1.3" }
errors = { path = "../errors" }
labuf = { git = "https://github.com/Trombecher/labuf", version = "0.1.0" }
fallible-iterator = "0.3.0"
ecow = "0.2.4"